k8s/trivy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trivy-server
  namespace: apc-cicd-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trivy-server
  template:
    metadata:
      labels:
        app: trivy-server
    spec:
      containers:
      - name: trivy-server
        image: aquasec/trivy:latest
        args:
        - server
        - --listen
        - 0.0.0.0:4954
        ports:
        - containerPort: 4954
          name: http-trivy
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: trivy-server
  namespace: apc-cicd-ns
spec:
  selector:
    app: trivy-server
  ports:
  - name: http
    port: 4954
    targetPort: 4954
